[project]
name = "nt-etl-order-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.9.0",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.3",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = []
